--- a/services/styles.css
+++ b/services/styles.css
@@ -194,7 +194,7 @@ footer {
 
 @media (max-width: 600px) {
     body {
-        padding-top: 130px;
+        padding-top: 150px;
     }
 
     header {
